antigen-macros/tests/ui/presents_requires_empty_min_version.stderr
error: requires: `ratified_doc(min_version = "")` is vacuously true (NFA-15); any versioned doc passes an empty floor — specify a non-empty version string
  --> tests/ui/presents_requires_empty_min_version.rs:11:26
   |
11 | #[presents(DummyAntigen, requires = ratified_doc(min_version = ""))]
   |                          ^^^^^^^^
